updated css and html file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <a href="#contact">Contact</a>
     </div>
   </div>
+<div class="content">
+  <div class="container"></div> 
+  <div class="text">
+    <h1>Drish K.C.</h1>
+  </div>
+</div>
 
 </body>
 </html>
